--- a/index.html
+++ b/index.html
@@ -127,10 +127,11 @@
         <a href="game5.html" class="menu-card pok-card">
             <span class="icon">🧧</span>
             <span class="title">ป๊อกเด้ง PRO</span>
-            <span class="desc">เกมวัดดวงยอดฮิตในไทย รองรับระบบออนไลน์แบบเรียลไทม์</span>
+            <span class="desc">ถ้าคิดว่าแน่ก็เข้ามา</span>
             <span class="tag online pok-tag">Online Multiplayer</span>
         </a>
     </div>
 
 </body>
+
 </html>
