--- a/index.html
+++ b/index.html
@@ -127,11 +127,17 @@
         <a href="game5.html" class="menu-card pok-card">
             <span class="icon">🧧</span>
             <span class="title">ป๊อกเด้ง PRO</span>
-            <span class="desc">ถ้าคิดว่าแน่ก็เข้ามา</span>
+            <span class="desc">เกมวัดดวงยอดฮิตในไทย รองรับระบบออนไลน์แบบเรียลไทม์</span>
             <span class="tag online pok-tag">Online Multiplayer</span>
+        </a>
+
+        <a href="hpny.html" class="menu-card" style="border-color: var(--kang);">
+            <span class="icon">🎇</span>
+            <span class="title">ของขวัญปีใหม่ 2026</span>
+            <span class="desc">เปิดกล่องสุ่มความสุขต้อนรับปีใหม่ (ต้องมีรหัสผ่าน)</span>
+            <span class="tag special">New Year Special</span>
         </a>
     </div>
 
 </body>
-
 </html>
