--- a/hpny.html
+++ b/hpny.html
@@ -19,6 +19,7 @@
             <h2>สวัสดีปีใหม่ 2026</h2>
             <p>รหัสผ่านจะโชว์ที่หน้าจอทีวีในวันที่ 1/1/2026</p>
             <p>กรุณาใส่รหัสผ่านเพื่อเปิดกล่องความสุข</p>
+            <p>Dev by nincandy</p>
             <input type="text" id="passwordInput" placeholder="รหัสผ่าน..." autocomplete="off" onkeypress="if(event.key === 'Enter') checkPassword()">
             <button onclick="checkPassword()">เปิดกล่องของขวัญ ✨</button>
             <p id="error-msg">รหัสผ่านไม่ถูกต้อง!</p>
@@ -43,4 +44,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
