--- a/hpny.html
+++ b/hpny.html
@@ -12,14 +12,14 @@
     <div id="login-screen">
         <div class="bg-glow"></div>
         <div class="login-box">
-            <button class="btn-retry" onclick="window.location.href='index.html'" style="background: linear-gradient(45deg, #00d4ff, #7000ff); margin-top: 10px;">
+            <button class="btn-retry" onclick="window.location.href='index.html'"; margin-top: 10px;">
         กลับไปหน้า Party Hub 🍻
     </button>
             <div class="icon">🎁</div>
             <h2>สวัสดีปีใหม่ 2026</h2>
             <p>รหัสผ่านจะโชว์ที่หน้าจอทีวีในวันที่ 1/1/2026</p>
             <p>กรุณาใส่รหัสผ่านเพื่อเปิดกล่องความสุข</p>
-            <p>Dev by nincandy</p>
+            <p style="background: linear-gradient(45deg, #00d4ff, #7000ff)>Dev by nincandy</p>
             <input type="text" id="passwordInput" placeholder="รหัสผ่าน..." autocomplete="off" onkeypress="if(event.key === 'Enter') checkPassword()">
             <button onclick="checkPassword()">เปิดกล่องของขวัญ ✨</button>
             <p id="error-msg">รหัสผ่านไม่ถูกต้อง!</p>
@@ -33,6 +33,8 @@
                 <h1 class="title">HAPPY NEW YEAR 2026</h1>
                 <div class="separator"></div>
                 <div id="wish-text"></div>
+                <br>
+                <p style="background: linear-gradient(45deg, #00d4ff, #7000ff)>Dev by nincandy</p>
                 <button class="btn-retry" onclick="location.reload()">เปิดอีกรอบ 🎁</button>
                 <br>
                 <button class="btn-retry" onclick="window.location.href='index.html'" style="background: linear-gradient(45deg, #00d4ff, #7000ff); margin-top: 10px;">
@@ -46,3 +48,4 @@
 </body>
 
 </html>
+
