--- a/hpny.html
+++ b/hpny.html
@@ -19,7 +19,7 @@
             <h2>สวัสดีปีใหม่ 2026</h2>
             <p>รหัสผ่านจะโชว์ที่หน้าจอทีวีในวันที่ 1/1/2026</p>
             <p>กรุณาใส่รหัสผ่านเพื่อเปิดกล่องความสุข</p>
-            <p style="background: linear-gradient(45deg, #00d4ff, #7000ff)>Dev by nincandy</p>
+            <p style="background: linear-gradient(45deg, #00d4ff, #7000ff)">Dev by nincandy</p>
             <input type="text" id="passwordInput" placeholder="รหัสผ่าน..." autocomplete="off" onkeypress="if(event.key === 'Enter') checkPassword()">
             <button onclick="checkPassword()">เปิดกล่องของขวัญ ✨</button>
             <p id="error-msg">รหัสผ่านไม่ถูกต้อง!</p>
@@ -34,7 +34,7 @@
                 <div class="separator"></div>
                 <div id="wish-text"></div>
                 <br>
-                <p style="background: linear-gradient(45deg, #00d4ff, #7000ff)>Dev by nincandy</p>
+                <p style="background: linear-gradient(45deg, #00d4ff, #7000ff)">Dev by nincandy</p>
                 <button class="btn-retry" onclick="location.reload()">เปิดอีกรอบ 🎁</button>
                 <br>
                 <button class="btn-retry" onclick="window.location.href='index.html'" style="background: linear-gradient(45deg, #00d4ff, #7000ff); margin-top: 10px;">
@@ -48,4 +48,5 @@
 </body>
 
 </html>
+
 
